[package]
name = "localizer"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
axum = { version = "0.6.1", features = ["multipart"] }
chrono = { version = "0.4.23", features = ["serde"] }
hyper = { version = "0.14.23", features = ["full"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "uuid", "bigdecimal", "postgres", "chrono", "migrate", "offline"] }
thiserror = "1.0.38"
tokio = { version = "1.27.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["trace"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
